Added superficial data.

--- a/geo_app.ipynb
+++ b/geo_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,80 +19,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
-    "azero_geo_path = os.path.join('/','srv','data','azero','geo')\n",
-    "guadalquivir_geo_path = os.path.join('/','srv','data','guadalquivir','geo')\n",
+    "def format_file_size(fsize):\n",
+    "    result = []\n",
+    "    units = {s: u for s, u in zip(reversed([2 ** n for n in range(0, 40, 10)]), ['GiB', 'MiB', 'KiB', 'bytes'])}\n",
+    "    for s, u in units.items():\n",
+    "        t = fsize // s\n",
+    "        if t > 0:\n",
+    "            result.append('{} {}'.format(t, u))\n",
+    "        fsize = fsize % s\n",
+    "    return ', '.join(result) or '0 bytes'\n",
     "\n",
-    "azero_geo_files = os.listdir(azero_geo_path)\n",
-    "guadalquivir_geo_files = os.listdir(guadalquivir_geo_path)\n",
+    "def file_path_to_size(file_path):\n",
+    "    return 'tamaño: ' + format_file_size(os.stat(file_path).st_size)\n",
     "\n",
-    "for files in [azero_geo_files, guadalquivir_geo_files]:\n",
-    "    checks = '.ipynb_checkpoints'\n",
-    "    if checks in files:\n",
-    "        files.remove(checks)\n",
-    "\n",
-    "azero_layer_names = [file_name[:-5]for file_name in azero_geo_files]\n",
-    "guadalquivir_layer_names = [file_name[:-5]for file_name in guadalquivir_geo_files]\n",
-    "\n",
-    "azero_layer_paths = [os.path.join(azero_geo_path, file_name + '.json') for file_name in azero_layer_names]\n",
-    "guadalquivir_layer_paths = [os.path.join(guadalquivir_geo_path, file_name + '.json') for file_name in guadalquivir_layer_names]\n",
-    "\n",
-    "azero_name_to_path = dict(zip(azero_layer_names, azero_layer_paths))\n",
-    "guadalquivir_name_to_path = dict(zip(guadalquivir_layer_names, guadalquivir_layer_paths))"
+    "def new_remove(l, e):\n",
+    "    if e in l:\n",
+    "        l.remove(e)\n",
+    "        return l\n",
+    "    else: return l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cuenca_toggle = widgets.ToggleButtons(\n",
-    "    options=['Azero', 'Guadalquivir',],\n",
-    "    value='Azero',\n",
-    "    tooltips=['Cuenca Azero', 'Cuenca Guadalquivir'],\n",
+    "base_path = os.path.join('/','srv','data')\n",
+    "folders = ['azero','guadalquivir','superficial']\n",
+    "\n",
+    "geo_paths = {folder:os.path.join(base_path,folder,'geo') for folder in folders}\n",
+    "geo_file_lists = {folder:new_remove(os.listdir(geo_paths[folder]),'.ipynb_checkpoints') for folder in folders}\n",
+    "layer_names = {folder:[file[:-5] for file in geo_file_lists[folder]] for folder in folders}\n",
+    "layer_paths = {folder:[os.path.join(geo_paths[folder], file) for file in geo_file_lists[folder]] for folder in folders}\n",
+    "name_to_path = {folder:dict(zip(layer_names[folder], layer_paths[folder])) for folder in folders}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_layers = 3\n",
+    "color_list = ['blue', 'green', 'yellow'] * 3\n",
+    "\n",
+    "folder_toggle = widgets.ToggleButtons(\n",
+    "    options=folders,\n",
+    "    value=folders[0]\n",
     ")\n",
     "\n",
-    "layer_1_dropdown = widgets.Dropdown(\n",
-    "    options=azero_layer_names,\n",
-    "    description='Capa 1:',\n",
-    ")\n",
+    "layer_dropdowns = [widgets.Dropdown(\n",
+    "    options=layer_names[folder_toggle.value],\n",
+    "    description=f'Capa {i}',\n",
+    ") for i in range(num_layers)]\n",
     "\n",
-    "color_1 = widgets.ColorPicker(\n",
+    "color_pickers = [widgets.ColorPicker(\n",
     "    concise=True,\n",
-    "    value='blue',\n",
-    ")\n",
+    "    value=color,\n",
+    "    layout=dict(width='40px')\n",
+    ") for color in color_list[:num_layers]]\n",
     "\n",
-    "layer_2_dropdown = widgets.Dropdown(\n",
-    "    options=azero_layer_names,\n",
-    "    description='Capa 2:',\n",
-    ")\n",
-    "color_2 = widgets.ColorPicker(\n",
-    "    concise=True,\n",
-    "    value='green',\n",
-    ")\n",
-    "\n",
-    "layer_3_dropdown = widgets.Dropdown(\n",
-    "    options=azero_layer_names,\n",
-    "    description='Capa 3:',\n",
-    ")\n",
-    "color_3 = widgets.ColorPicker(\n",
-    "    concise=True,\n",
-    "    value='yellow',\n",
-    ")\n",
+    "size_labels = [widgets.Label(\n",
+    "    value=file_path_to_size(name_to_path[folder_toggle.value][layer_dropdowns[i].value])\n",
+    ") for i in range(num_layers)]\n",
     "\n",
     "accordion = widgets.Accordion(children=[\n",
-    "    cuenca_toggle,\n",
-    "    widgets.VBox([\n",
-    "        widgets.HBox([layer_1_dropdown, color_1]),\n",
-    "        widgets.HBox([layer_2_dropdown, color_2]),\n",
-    "        widgets.HBox([layer_3_dropdown, color_3]),\n",
-    "    ])\n",
+    "    folder_toggle,\n",
+    "    widgets.VBox([widgets.HBox([\n",
+    "        layer_dropdowns[i],\n",
+    "        color_pickers[i],\n",
+    "        size_labels[i]\n",
+    "    ]) for i in range(num_layers)])\n",
     "])\n",
-    "accordion.set_title(0,'Cuenca')\n",
+    "accordion.set_title(0,'Datos')\n",
     "accordion.set_title(1,'Capas')\n",
     "\n",
     "go_button = widgets.Button(\n",
@@ -100,6 +104,10 @@
     "    disabled=False,\n",
     "    button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
     "    tooltip='Mostrar capa',\n",
+    ")\n",
+    "\n",
+    "loading_label = widgets.Label(\n",
+    "    value = 'some'\n",
     ")\n",
     "\n",
     "my_map = Map(\n",
@@ -119,58 +127,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def handle_cuenca_change(change):\n",
-    "    if change.new == 'Azero':\n",
-    "        layer_1_dropdown.options = azero_layer_names\n",
-    "        layer_2_dropdown.options = azero_layer_names\n",
-    "        layer_3_dropdown.options = azero_layer_names\n",
-    "    elif change.new == 'Guadalquivir':\n",
-    "        layer_1_dropdown.options = guadalquivir_layer_names\n",
-    "        layer_2_dropdown.options = guadalquivir_layer_names\n",
-    "        layer_3_dropdown.options = guadalquivir_layer_names\n",
+    "def handle_layer_change(i):\n",
+    "    def handle_layer_i_change(change):\n",
+    "        file_path = name_to_path[folder_toggle.value][change.new]\n",
+    "        size_labels[i].value = file_path_to_size(file_path)\n",
+    "    return handle_layer_i_change\n",
     "\n",
-    "def hover_handler(event=None, id=None, properties=None):\n",
+    "def handle_folder_change(change):\n",
+    "    for i in range(num_layers):\n",
+    "        layer_dropdowns[i].options = layer_names[change.new]\n",
+    "\n",
+    "def click_handler(event=None, id=None, properties=None):\n",
     "    output_table.clear_output()\n",
-    "    \n",
     "    props = properties\n",
     "    props.pop('style', None)\n",
-    "    \n",
     "    with output_table:\n",
     "        display(pd.DataFrame(props, index=[0]))\n",
     "\n",
     "def handle_go_click(change):\n",
+    "    loading_label.value = 'Cargando Capas ...'\n",
     "    my_map.clear_layers()\n",
     "    \n",
-    "    ln = [layer_1_dropdown.value, layer_2_dropdown.value, layer_3_dropdown.value]\n",
-    "    lc = [color_1.value, color_2.value, color_3.value]\n",
+    "    ln = [layer_dropdowns[i].value for i in range(num_layers)]\n",
+    "    lc = [color_pickers[i].value for i in range(num_layers)]\n",
     "    \n",
-    "    layer_names = []\n",
-    "    layer_colors = []\n",
-    "    for layer_name, layer_color in zip(ln, lc):\n",
-    "        if not layer_name in layer_names:\n",
-    "            layer_names.append(layer_name)\n",
-    "            layer_colors.append(layer_color)\n",
-    "        \n",
-    "    \n",
+    "    lns = []\n",
+    "    lcs = []\n",
+    "    for layer_n, layer_c in zip(ln, lc):\n",
+    "        if not layer_n in lns:\n",
+    "            lns.append(layer_n)\n",
+    "            lcs.append(layer_c)\n",
+    "\n",
     "    data_list = []\n",
     "    \n",
-    "    for layer_name in layer_names:\n",
-    "        if cuenca_toggle.value == 'Azero':\n",
-    "            with open(azero_name_to_path[layer_name], 'r', encoding='utf-8') as f:\n",
+    "    for layer_n in lns:\n",
+    "        encoding = 'ISO-8859-1' if layer_n == 'predios_proceso_saneamiento' else 'utf-8'\n",
+    "        with open(name_to_path[folder_toggle.value][layer_n], 'r', encoding=encoding) as f:\n",
     "                data_list.append(json.load(f))\n",
-    "        elif cuenca_toggle.value == 'Guadalquivir':\n",
-    "            if layer_name == 'predios_proceso_saneamiento.json':\n",
-    "                with open(guadalquivir_name_to_path[layer_name], 'r') as f:\n",
-    "                    data_list.append(json.load(f))\n",
-    "            else:\n",
-    "                with open(guadalquivir_name_to_path[layer_name], 'r', encoding='utf-8') as f:\n",
-    "                    data_list.append(json.load(f))\n",
     "        \n",
-    "    for data, color in zip(data_list, layer_colors):\n",
+    "    for data, color in zip(data_list, lcs):\n",
     "        for feature in data['features']:\n",
     "            feature['properties']['style'] = dict(\n",
     "                color=color,\n",
@@ -181,33 +180,37 @@
     "        \n",
     "    selected_layers = [GeoJSON(\n",
     "        data=data,\n",
-    "        name=layer_name,\n",
+    "        name=layer_n,\n",
     "        hover_style={'fillColor':'red'}\n",
-    "    ) for data, layer_name in zip(data_list, layer_names)]\n",
+    "    ) for data, layer_n in zip(data_list, lns)]\n",
     "    \n",
     "    for selected_layer in selected_layers:\n",
     "        my_map.add_layer(selected_layer)\n",
-    "        selected_layer.on_hover(hover_handler)\n",
+    "        selected_layer.on_click(click_handler)\n",
     "    \n",
+    "    loading_label.value = 'Listo!'\n",
     "\n",
-    "cuenca_toggle.observe(handle_cuenca_change, names='value')\n",
+    "for i in range(num_layers):\n",
+    "    layer_dropdowns[i].observe(handle_layer_change(i),names='value')\n",
+    "    \n",
+    "folder_toggle.observe(handle_folder_change, names='value')\n",
     "go_button.on_click(handle_go_click)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74e8bb3e8e424fafa54abb9d515a78ec",
+       "model_id": "7bd79fcee1f44120a939e6348d8fa4fd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Accordion(children=(ToggleButtons(options=('Azero', 'Guadalquivir'), tooltips=('Cuenca Azero', …"
+       "VBox(children=(Accordion(children=(ToggleButtons(options=('azero', 'guadalquivir', 'superficial'), value='azer…"
       ]
      },
      "metadata": {},
@@ -215,7 +218,7 @@
     }
    ],
    "source": [
-    "widgets.VBox([accordion, go_button, my_map, output_table,])"
+    "widgets.VBox([accordion, widgets.HBox([go_button, loading_label]), my_map, output_table,])"
    ]
   }
  ],
