Updated sync file. Added geo_app features.

--- a/geo_app.ipynb
+++ b/geo_app.ipynb
@@ -2,24 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ipyleaflet import (\n",
-    "    Map, GeoJSON, basemaps, basemap_to_tiles,\n",
+    "    Map, GeoJSON, basemaps, basemap_to_tiles, Choropleth,\n",
     "    LayersControl, SplitMapControl, DrawControl, MeasureControl\n",
     ")\n",
     "import ipywidgets as widgets\n",
+    "import plotly.graph_objs as go\n",
     "import pandas as pd\n",
     "from IPython.display import display\n",
     "import json\n",
-    "import os"
+    "import os\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +58,21 @@
     "geo_file_lists = {folder:new_remove(os.listdir(geo_paths[folder]),'.ipynb_checkpoints') for folder in folders}\n",
     "layer_names = {folder:[file[:-5] for file in geo_file_lists[folder]] for folder in folders}\n",
     "layer_paths = {folder:[os.path.join(geo_paths[folder], file) for file in geo_file_lists[folder]] for folder in folders}\n",
-    "name_to_path = {folder:dict(zip(layer_names[folder], layer_paths[folder])) for folder in folders}"
+    "name_to_path = {folder:dict(zip(layer_names[folder], layer_paths[folder])) for folder in folders}\n",
+    "\n",
+    "directories = ['calibracion','reporte']\n",
+    "csv_paths = [os.path.join(base_path,'superficial','csv',d) for d in directories]\n",
+    "csv_file_lists = [new_remove(os.listdir(path), '.ipynb_checkpoints') for path in csv_paths]\n",
+    "    \n",
+    "dfs = {}\n",
+    "for d,path,files in zip(directories,csv_paths,csv_file_lists):\n",
+    "    for file in files:\n",
+    "        dfs[f'{d}-{file[:-4]}']= pd.read_csv(os.path.join(path,file))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +84,15 @@
     "    value=folders[0]\n",
     ")\n",
     "\n",
+    "layer_checkboxes = [widgets.Checkbox(\n",
+    "    value=True if i==0 else False,\n",
+    "    layout=dict(width='100px'),\n",
+    ") for i in range(num_layers)]\n",
+    "\n",
     "layer_dropdowns = [widgets.Dropdown(\n",
     "    options=layer_names[folder_toggle.value],\n",
-    "    description=f'Capa {i}',\n",
+    "    description=f'Capa {i+1}',\n",
+    "    disabled= not layer_checkboxes[i].value,\n",
     ") for i in range(num_layers)]\n",
     "\n",
     "color_pickers = [widgets.ColorPicker(\n",
@@ -88,14 +105,18 @@
     "    value=file_path_to_size(name_to_path[folder_toggle.value][layer_dropdowns[i].value])\n",
     ") for i in range(num_layers)]\n",
     "\n",
-    "accordion = widgets.Accordion(children=[\n",
-    "    folder_toggle,\n",
-    "    widgets.VBox([widgets.HBox([\n",
-    "        layer_dropdowns[i],\n",
-    "        color_pickers[i],\n",
-    "        size_labels[i]\n",
-    "    ]) for i in range(num_layers)])\n",
-    "])\n",
+    "accordion = widgets.Accordion(\n",
+    "    selected_index=None,\n",
+    "    children=[\n",
+    "        folder_toggle,\n",
+    "        widgets.VBox([widgets.HBox([\n",
+    "            layer_checkboxes[i],\n",
+    "            layer_dropdowns[i],\n",
+    "            color_pickers[i],\n",
+    "            size_labels[i]\n",
+    "        ]) for i in range(num_layers)])\n",
+    "    ]\n",
+    ")\n",
     "accordion.set_title(0,'Datos')\n",
     "accordion.set_title(1,'Capas')\n",
     "\n",
@@ -106,9 +127,7 @@
     "    tooltip='Mostrar capa',\n",
     ")\n",
     "\n",
-    "loading_label = widgets.Label(\n",
-    "    value = 'some'\n",
-    ")\n",
+    "loading_label = widgets.Label()\n",
     "\n",
     "my_map = Map(\n",
     "    center=(-21.5119,-64.7253),\n",
@@ -122,15 +141,38 @@
     "my_map.add_control(DrawControl())\n",
     "my_map.add_control(MeasureControl())\n",
     "\n",
-    "output_table = widgets.Output()"
+    "output_table = widgets.Output()\n",
+    "fig = go.FigureWidget(layout=dict(height=10))\n",
+    "fig.add_scatter()\n",
+    "\n",
+    "csv_key = widgets.Label(\n",
+    "    description='Código:',\n",
+    "    layout=dict(display='none'),\n",
+    ")\n",
+    "\n",
+    "csv_dropdown = widgets.Dropdown(\n",
+    "    options = list(dfs.keys()),\n",
+    "    layout=dict(display='none', width='450px'),\n",
+    ")\n",
+    "\n",
+    "diagram_type = widgets.ToggleButtons(\n",
+    "    options=['completo','mensual'],\n",
+    "    value='completo',\n",
+    "    layout=dict(display='none')\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def handle_checkbox_change(i):\n",
+    "    def handle_checkbox_i_change(change):\n",
+    "        layer_dropdowns[i].disabled = not change.new\n",
+    "    return handle_checkbox_i_change\n",
+    "\n",
     "def handle_layer_change(i):\n",
     "    def handle_layer_i_change(change):\n",
     "        file_path = name_to_path[folder_toggle.value][change.new]\n",
@@ -141,35 +183,68 @@
     "    for i in range(num_layers):\n",
     "        layer_dropdowns[i].options = layer_names[change.new]\n",
     "\n",
+    "months = ['Ene','Feb','Mar','Abr','May','Jun','Jul','Ago','Sep','Oct','Nov','Dic']    \n",
+    "    \n",
+    "def get_scatter_x(d_type,csv):\n",
+    "    df = dfs[csv]\n",
+    "    if d_type == 'completo':\n",
+    "        x = [datetime.datetime(year=y, month=m, day=15) for y,m in zip(df.Year, df.Month)] \n",
+    "    if d_type == 'mensual':\n",
+    "        x = months\n",
+    "    return x\n",
+    "\n",
+    "def get_scatter_y(d_type,csv,code):\n",
+    "    df= dfs[csv]\n",
+    "    m_to_i = dict(zip(months,[i+1 for i in range(12)]))\n",
+    "    return df[code] if d_type == 'completo' else [df[df.Month == m_to_i[m]][code].mean() for m in months]\n",
+    "        \n",
+    "def handle_diagram_type_change(change):\n",
+    "    csv, code = csv_dropdown.value, csv_key.value\n",
+    "    fig.data[0].x = get_scatter_x(change.new,csv)\n",
+    "    fig.data[0].y = get_scatter_y(change.new,csv,code)\n",
+    "\n",
+    "\n",
     "def click_handler(event=None, id=None, properties=None):\n",
     "    output_table.clear_output()\n",
     "    props = properties\n",
     "    props.pop('style', None)\n",
     "    with output_table:\n",
     "        display(pd.DataFrame(props, index=[0]))\n",
+    "        \n",
+    "    if folder_toggle.value == 'superficial':\n",
+    "        code = properties['codigo']\n",
+    "        name = properties['nombre'] if 'nombre' in properties.keys() else properties['NOMBRE']\n",
+    "        csv_key.value = code\n",
+    "        fig.layout.height=450\n",
+    "        csv_dropdown.layout.display = 'block'\n",
+    "        diagram_type.layout.display = 'block'\n",
+    "        d_type, csv = diagram_type.value, csv_dropdown.value\n",
+    "        fig.layout.title= f'{csv}<br>{name} ({code})'\n",
+    "        fig.data[0].x= get_scatter_x(d_type,csv)\n",
+    "        fig.data[0].y= get_scatter_y(d_type,csv,code)\n",
+    "        \n",
+    "def handle_csv_change(change):\n",
+    "    fig.layout.title = f\"{change.new}<br>{fig.layout.title.split('<br>')[1]}\"\n",
+    "    fig.data[0].x= get_scatter_x(diagram_type.value,change.new)\n",
+    "    fig.data[0].y= get_scatter_y(diagram_type.value,change.new,csv_key.value)\n",
     "\n",
     "def handle_go_click(change):\n",
     "    loading_label.value = 'Cargando Capas ...'\n",
     "    my_map.clear_layers()\n",
     "    \n",
-    "    ln = [layer_dropdowns[i].value for i in range(num_layers)]\n",
-    "    lc = [color_pickers[i].value for i in range(num_layers)]\n",
-    "    \n",
-    "    lns = []\n",
-    "    lcs = []\n",
-    "    for layer_n, layer_c in zip(ln, lc):\n",
-    "        if not layer_n in lns:\n",
-    "            lns.append(layer_n)\n",
-    "            lcs.append(layer_c)\n",
+    "    selected_layers, selected_colors = ([],[])\n",
+    "    for i in range(num_layers):\n",
+    "        if layer_checkboxes[i].value:\n",
+    "            selected_layers.append(layer_dropdowns[i].value)\n",
+    "            selected_colors.append(color_pickers[i].value)\n",
     "\n",
     "    data_list = []\n",
-    "    \n",
-    "    for layer_n in lns:\n",
-    "        encoding = 'ISO-8859-1' if layer_n == 'predios_proceso_saneamiento' else 'utf-8'\n",
-    "        with open(name_to_path[folder_toggle.value][layer_n], 'r', encoding=encoding) as f:\n",
+    "    for layer_name in selected_layers:\n",
+    "        with open(name_to_path[folder_toggle.value][layer_name], 'r', encoding='utf-8-sig') as f:\n",
     "                data_list.append(json.load(f))\n",
     "        \n",
-    "    for data, color in zip(data_list, lcs):\n",
+    "    geojson_layers = []\n",
+    "    for data, color, layer_name in zip(data_list, selected_colors, selected_layers):\n",
     "        for feature in data['features']:\n",
     "            feature['properties']['style'] = dict(\n",
     "                color=color,\n",
@@ -178,34 +253,64 @@
     "                fillOpacity=.3\n",
     "            )\n",
     "        \n",
-    "    selected_layers = [GeoJSON(\n",
-    "        data=data,\n",
-    "        name=layer_n,\n",
-    "        hover_style={'fillColor':'red'}\n",
-    "    ) for data, layer_n in zip(data_list, lns)]\n",
+    "        id_to_density = {}\n",
+    "        if layer_name == 'densidad_poblacion_por_microcuenca':\n",
+    "            for feature in data['features']:\n",
+    "                density = feature['properties']['DENSIDAD']\n",
+    "                id_to_density[feature['id']] = density if density < 100 else 100 \n",
+    "                \n",
+    "            geojson_layer = Choropleth(\n",
+    "                geo_data=data,\n",
+    "                choro_data=id_to_density,\n",
+    "#                 colormap=linear.YlOrRd_04, \n",
+    "#                 border_color='black',\n",
+    "                style={'fillOpacity': 0.8, 'dashArray': '5, 5'}\n",
+    "            )\n",
+    "        else:\n",
+    "            geojson_layer = GeoJSON(\n",
+    "                data=data,\n",
+    "                name=layer_name,\n",
+    "                hover_style={'fillColor':'red'}\n",
+    "            )\n",
+    "        geojson_layers.append(geojson_layer)\n",
+    "                \n",
+    "#     geojson_layers = []\n",
+    "#     for data, layer_name in zip(data_list, selected_layers):\n",
+    "#         if layer_name = 'densidad_poblacion_por_microcuenca':\n",
+    "#             geojson_layer = \n",
     "    \n",
-    "    for selected_layer in selected_layers:\n",
-    "        my_map.add_layer(selected_layer)\n",
-    "        selected_layer.on_click(click_handler)\n",
+    "#     geojson_layers = [GeoJSON(\n",
+    "#         data=data,\n",
+    "#         name=layer_n,\n",
+    "#         hover_style={'fillColor':'red'}\n",
+    "#     ) for data, layer_n in zip(data_list, selected_layers)]\n",
     "    \n",
-    "    loading_label.value = 'Listo!'\n",
+    "    for geojson_layer in geojson_layers:\n",
+    "        my_map.add_layer(geojson_layer)\n",
+    "        geojson_layer.on_click(click_handler)\n",
+    "    \n",
+    "    loading_label.value = 'Listo! Clickea en cualquier elemento para obtener más información.'\n",
     "\n",
+    "    \n",
     "for i in range(num_layers):\n",
+    "    layer_checkboxes[i].observe(handle_checkbox_change(i),names='value')\n",
     "    layer_dropdowns[i].observe(handle_layer_change(i),names='value')\n",
     "    \n",
     "folder_toggle.observe(handle_folder_change, names='value')\n",
-    "go_button.on_click(handle_go_click)"
+    "go_button.on_click(handle_go_click)\n",
+    "csv_dropdown.observe(handle_csv_change, names='value')\n",
+    "diagram_type.observe(handle_diagram_type_change, names='value')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bd79fcee1f44120a939e6348d8fa4fd",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,8 +323,22 @@
     }
    ],
    "source": [
-    "widgets.VBox([accordion, widgets.HBox([go_button, loading_label]), my_map, output_table,])"
+    "widgets.VBox([\n",
+    "    accordion,\n",
+    "    widgets.HBox([go_button, loading_label]),\n",
+    "    my_map, \n",
+    "    output_table,\n",
+    "    fig,csv_key, \n",
+    "    widgets.HBox([csv_dropdown, diagram_type]),\n",
+    "])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
