Added presentation with images and meta information of data.

--- a/geo_app.ipynb
+++ b/geo_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,8 +262,6 @@
     "            geojson_layer = Choropleth(\n",
     "                geo_data=data,\n",
     "                choro_data=id_to_density,\n",
-    "#                 colormap=linear.YlOrRd_04, \n",
-    "#                 border_color='black',\n",
     "                style={'fillOpacity': 0.8, 'dashArray': '5, 5'}\n",
     "            )\n",
     "        else:\n",
@@ -273,17 +271,6 @@
     "                hover_style={'fillColor':'red'}\n",
     "            )\n",
     "        geojson_layers.append(geojson_layer)\n",
-    "                \n",
-    "#     geojson_layers = []\n",
-    "#     for data, layer_name in zip(data_list, selected_layers):\n",
-    "#         if layer_name = 'densidad_poblacion_por_microcuenca':\n",
-    "#             geojson_layer = \n",
-    "    \n",
-    "#     geojson_layers = [GeoJSON(\n",
-    "#         data=data,\n",
-    "#         name=layer_n,\n",
-    "#         hover_style={'fillColor':'red'}\n",
-    "#     ) for data, layer_n in zip(data_list, selected_layers)]\n",
     "    \n",
     "    for geojson_layer in geojson_layers:\n",
     "        my_map.add_layer(geojson_layer)\n",
@@ -304,13 +291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "96d7d38e96004fba94665828e5cf0031",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,13 +319,6 @@
     "    widgets.HBox([csv_dropdown, diagram_type]),\n",
     "])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
