Updated presentation, added final report

--- a/presentacion.ipynb
+++ b/presentacion.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# MMAyA - Sistemas de Información con miras al SATD y Nodos en cuencas estratégicas\n",
+    " # MMAyA - Sistemas de Información con miras al SATD y Nodos en cuencas estratégicas\n",
     "\n",
     "\n",
     "Sergio Chumacero\n",
@@ -78,11 +78,58 @@
     }
    },
    "source": [
-    "### Uno de los objetivos PROCUENCA: Establecer Procesos de Gestión de la Información en torno a la temática Hídrico-Ambiental. \n",
+    "### Uno de los objetivos PROCUENCA: Establecer procesos de gestión de la Información en torno a la temática hídrico-ambiental. \n",
     "\n",
     "Objetivos Consultoría:\n",
-    "* Caracterizar el estado actual de los sistemas de información del MMAyA en temas de gestión hídrica, relacionados al SATD y Nodos de cuenca\n",
-    "* Proponer una estratégia y tecnologías en el área de manejo de datos con el fin de implementar y operativizar el SATD y Nodos de Cuenca en Cuencas Estratégicas"
+    "* Describir los sistemas de información hídrico-ambiental del MMAyA relacionados al SATD y Nodos de Cuenca.\n",
+    "* Proponer una estratégia para la implementación del SATD y Nodos de Cuenca en las Cuencas Estratégicas Azero y Guadalquivir, tomando en consideración tecnologías en el área de manejo de datos. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**Nodo de Cuenca**\n",
+    "\n",
+    "* Punto de Acceso de los distintos actores de la cuenca al sistema de información del MMAyA.\n",
+    "* Incluye el subconjunto de datos del sistema concernientes a las funciones de los actores.   \n",
+    "\n",
+    "<div align=\"center\"><img src=\"./img/nodos_cuenca.png\"/></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**SATD (Sistema de Apoyo a la Toma de Decisiones)**\n",
+    "\n",
+    "Sistema capaz de hacer uso de los datos de cuenca y ofrecer herramientas automatizadas de análisis y predicción que sirvan de apoyo a tareas de gestión de cuenca.\n",
+    "\n",
+    "<div align=\"center\"><img src=\"./img/satd.png\"/></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**SIARH (Sistema de Información Ambiental y de Recursos Hídricos)**\n",
+    "\n",
+    "* Extensión del SIRH - Resultado del proceso de centralización de sistemas\n",
+    "* En desarrollo - Infraestructura en obrajes\n",
+    "\n",
+    "* Subsistemas relevantes al SATD y Nodos: VIBH, SIASBO, (SIMCA) y GeoSIRH"
    ]
   },
   {
@@ -95,11 +142,12 @@
    "source": [
     "## Trabajo Previo:\n",
     "\n",
-    "* Análisis del Estado del Software y Hardware de Sistemas de Información del Sector de Medio Ambiente y Agua, para la Consolidación de un Sistema Integrado de Información. (21.09.2017 - BISIT S.R.L.)\n",
-    "    * Se concentró en: infraestructura, normativas\n",
-    "    * Recomendaciones:\n",
-    "        * Ciencia de Datos (Aprendizaje Automatizado)\n",
-    "        * Centralización de Infraestructura "
+    "Análisis del Estado del Software y Hardware de Sistemas de Información del Sector de Medio Ambiente y Agua, para la Consolidación de un Sistema Integrado de Información. (21.09.2017 - BISIT S.R.L.)\n",
+    "    \n",
+    "* Se concentró en: infraestructura, normativas\n",
+    "* Recomendaciones:\n",
+    "    * Ciencia de Datos (Aprendizaje Automatizado)\n",
+    "    * Centralización de Infraestructura "
    ]
   },
   {
@@ -414,7 +462,7 @@
     }
    },
    "source": [
-    "## Entornos de Trabajo Cloud: Más que una Aplicación Web\n",
+    "## Entornos de Trabajo Cloud\n",
     "\n",
     "Paradigma Aplicación Web vs. Entorno Cloud:\n",
     "* Aplicación Web: Gran cantidad de usuarios, poco poder computacional. (Estático/Semi-estático)\n",
@@ -429,13 +477,12 @@
     }
    },
    "source": [
-    "## Entornos de Trabajo Cloud: Más que una Aplicación Web\n",
+    "## Entornos de Trabajo Cloud\n",
     "\n",
     "Idea: Ofrecer un entorno de trabajo flexible y poderoso a los técnicos, desde el cual tengan acceso a los datos que necesitan y puedan trabajar con código (+ librerías) o herramientas gráficas generadas a pedido y en corto tiempo (o generar sus propias)."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
